fix partly double border

--- a/pages/contact/ContactUsPage.module.css
+++ b/pages/contact/ContactUsPage.module.css
@@ -15,7 +15,6 @@
 }
 
 .contactInfo {
-    border-right: #fff5 1px solid;
     width: 50%;
     align-self: flex-start;
     margin-top: 50px;
